# el-misc-tools

./: README  README.md  el-copy-map.py  elm-change-object-id.py  elm-remove-bad-lights.py  elm2mask.pl  elm2pov.pl  rects2def.pl
elm-annotate/: CMakeLists.txt
elm-annotate/source/: CMakeLists.txt  application.cpp  application.hpp  box.cpp  box.hpp  cache.cpp  cache.hpp  canvas.cpp  canvas.hpp  defines.hpp.in  endian.hpp  foreach.hpp  format.cpp  format.hpp  label.cpp  label.hpp  main.cpp  map.cpp  map.hpp  mark.cpp  mark.hpp  message.hpp  name.cpp  name.hpp  note.hpp  options.cpp  options.hpp  preprocessor.hpp  sender.hpp  store.cpp  store.hpp  toplevel.cpp  toplevel.hpp  utility.cpp  utility.hpp  widget.cpp  widget.hpp  workspace.cpp  workspace.hpp
elm-draw-tiles/: Makefile  main.c  map.c  map.h  options.c  options.h  utility.c  utility.h
elm-render-notes/: Makefile  draw.c  draw.h  image.c  image.h  main.c  note.c  note.h  options.c  options.h  places.c  places.h  utility.c  utility.h
elm-render-routes/: CMakeLists.txt  brush.cpp  brush.hpp  color.cpp  color.hpp  defines.hpp.in  file.cpp  file.hpp  foreach.hpp  format.cpp  format.hpp  grid.cpp  grid.hpp  heuristic.cpp  heuristic.hpp  image.cpp  image.hpp  main.cpp  options.cpp  options.hpp  path.cpp  path.hpp  point.hpp  pool.hpp  preprocessor.hpp  report.cpp  report.hpp  route.cpp  route.hpp  tile.cpp  tile.hpp  timer.cpp  timer.hpp  utility.hpp
elm-render-routes/cmake/: FindCAIRO.cmake
elmhdr/: Makefile  elmhdr.c
mask2rects/: Makefile  README  box.cpp  box.hpp  image.cpp  image.hpp  label.cpp  label.hpp  log.cpp  log.hpp  main.cpp  options.cpp  options.hpp  point.hpp  random.cpp  random.hpp  region.cpp  region.hpp
quickfix/: hair_gray.dds
